# MAC-Simplifier

./: .gitignore  CMakeLists.txt  readme.md  run_simplifier.py
include/: MACSimplifier.h  MathUtils.h
src/: MACSimplifier.cpp  main.cpp
